# ESIMULATOR

./: 4004_ALU_Linearity_Summary.md  4004_linearity_analysis.txt  4004_verilog_linearity_analysis.txt  README.md  README_DFG_Framework.md  REORGANIZATION_REPORT.md  alu1_complete_simulator.py  alu1_simulator.py  analyze_linearity.py  analyze_linearity_v2.py  demo.py  demo_comparison.py  demo_comparison_v2.py  dfg_linearity_analyzer.py  dfg_to_python.py  esimulator_cli.py  improved_dfg_parser.py  organize_project.py  pyproject.toml  reorganize_project.py  verilog_linearity_analyzer.py
backup_before_reorganize/: analysis_comparison.py  dfg_correction_analysis.py  test_parsing_logic.py
dfg_files/: 4004_dfg.txt  alu1.dot  alu1.html  alu1.json  alu1_dfg.txt
docs/: DFG_Linearity_Correction.md  DFG_to_DAG_Analysis_Summary.md  LIVE_DEMO_SCRIPT.md  PROJECT_ARCHITECTURE.md  PROJECT_INDEX.md  PROJECT_OVERVIEW.md  REORGANIZATION_REPORT_V2.md  TECHNICAL_PPT_OUTLINE.md  USAGE_GUIDE_V2.md  USER_MANUAL.md
esimulator/: __init__.py
esimulator/cli/: __init__.py  analyze_command.py  batch_command.py  compare_command.py  visualize_command.py
esimulator/core/: dfg_parser.py  (+2 more)
results/: 4004_dfg_linearity.dot  4004_dfg_linearity_analysis.txt  4004_focus.dot  4004_focus.json  alu1_dfg_linearity_analysis.txt  correct_linearity_analysis.txt  corrected_linearity_analysis.txt  linearity_analysis.txt
scripts/: PROJECT_STRUCTURE.md
src/: dag_structure_analyzer.py  dfg_to_dag_converter.py  improved_dfg_to_dag.py
tests/: test_parsing_logic.py
verilog_files/: 4004.v  alu1.v  fft_8point.v
(+24 files in other folders)
