[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esimulator"
version = "2.0.0"
description = "Data Flow Graph线性分析工具"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ESIMULATOR Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["dfg", "linearity", "analysis", "digital-circuit", "eda"]
dependencies = []

[project.optional-dependencies]
visualization = ["matplotlib>=3.5.0"]
dev = ["pytest>=6.0", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/JesterHey/ESIMULATOR"
Repository = "https://github.com/JesterHey/ESIMULATOR"
Issues = "https://github.com/JesterHey/ESIMULATOR/issues"

[project.scripts]
esimulator = "esimulator_cli:main"

[tool.setuptools.packages.find]
include = ["esimulator*"]

[tool.black]
line-length = 88
target-version = ['py38']
